# intent-framework

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  PLAN-RESERVATION.md  README.md  REQUIREMENTS.md  UNIT_TEST_COVERAGE_COMPARISON.md  aptos.nix  env.testnet.example  flake.nix  movement.nix  plan.md  setup-and-deploy.sh
solver/: Cargo.toml  README.md
solver/config/: solver.template.toml
solver/src/: acceptance.rs  config.rs  lib.rs  verifier_client.rs
solver/src/chains/: connected_evm.rs  connected_mvm.rs  hub.rs  mod.rs
solver/src/crypto/: hash.rs  mod.rs  signing.rs
solver/src/service/: inflow.rs  mod.rs  outflow.rs  signing.rs  tracker.rs
solver/tests/: acceptance_tests.rs  chain_clients_tests.rs  config_tests.rs  connected_chain_tx_template_test.rs  helpers.rs  outflow_service_tests.rs  signature_test.rs  signing_service_tests.rs  tracker_tests.rs  verifier_client_tests.rs
trusted-verifier/: .gitignore  Cargo.toml  README.md  plan.md  rust-toolchain.toml
trusted-verifier/config/: verifier.template.toml  verifier_testing.toml
trusted-verifier/docs/: README.md  api.md  guide.md
trusted-verifier/src/: aptos_client.rs  evm_client.rs  lib.rs  main.rs  mvm_client.rs
trusted-verifier/src/api/: aptos.rs  evm.rs  generic.rs  inflow.rs  inflow_aptos.rs  inflow_evm.rs  inflow_generic.rs  inflow_mvm.rs  mod.rs  negotiation.rs  outflow.rs  outflow_aptos.rs  outflow_evm.rs  outflow_generic.rs  outflow_mvm.rs
trusted-verifier/src/config/: mod.rs
trusted-verifier/src/crypto/: mod.rs
trusted-verifier/src/monitor/: aptos.rs  evm.rs  generic.rs  hub_mvm.rs  inflow.rs  inflow_aptos.rs  inflow_evm.rs  inflow_generic.rs  inflow_mvm.rs  mod.rs  outflow.rs  outflow_aptos.rs  outflow_evm.rs  outflow_generic.rs  outflow_mvm.rs
trusted-verifier/src/storage/: draft_intents.rs  draftintents.rs  mod.rs
trusted-verifier/src/validator/: aptos.rs  evm.rs  generic.rs  inflow_aptos.rs  inflow_evm.rs  inflow_generic.rs  inflow_mvm.rs  mod.rs  outflow_aptos.rs  outflow_evm.rs  outflow_generic.rs  outflow_mvm.rs
trusted-verifier/tests/: api_tests.rs  apt_tests.rs  config_tests.rs  config_tests_evm.rs  cross_chain_tests.rs  cross_chain_tests_evm.rs  crypto_tests.rs  crypto_tests_apt.rs  crypto_tests_evm.rs  evm_client_tests.rs  evm_tests.rs  helpers.rs  helpers_mock_server.rs  hub_tests.rs  integration_test.rs  mod.rs  monitor_tests.rs  monitor_tests_evm.rs  mvm_client_tests.rs  mvm_tests.rs  negotiation_validation_tests.rs  storage_tests.rs  unit_test.rs  validator_tests.rs  validator_tests_evm.rs
trusted-verifier/tests/apt/: cross_chain_tests.rs  crypto_tests.rs  validator_fulfillment_tests.rs
trusted-verifier/tests/evm/: config_tests.rs  cross_chain_tests.rs  crypto_tests.rs  escrow_parsing_tests.rs  monitor_tests.rs  (+2 more)
(+477 files in other folders)
